# wsync

./: README.md  build.sh  setup.py  setup.sh
lib/client/: Cargo.toml
lib/client/src/: client.rs
lib/daemon-client/: Cargo.toml
lib/daemon-client/src/: errors.rs
lib/daemon-interface/: Cargo.toml
lib/daemon-interface/src/: impls.rs  lib.rs  request.rs  response.rs
lib/wsync-config/: Cargo.toml
lib/wsync-config/src/: errors.rs  lib.rs
src/client/: Cargo.toml
src/client/src/: cli.rs  main.rs  mappers.rs
src/daemon/: Cargo.toml
src/daemon/src/: daemon_state.rs  handler.rs  handlers.rs  main.rs  monitor_manager.rs  watchdog.rs  workspace_config.rs
src/daemon/src/domain/: errors.rs  mod.rs  models.rs  socket.rs
src/daemon/src/handlers/: client.rs  errors.rs  handlers.rs  mod.rs
src/daemon/src/handlers/mappers/: domain_to_interface.rs  interface_to_domain.rs  mod.rs
src/daemon/src/mappers/: domain_to_interface.rs  mod.rs
src/daemon/src/types/: daemon_state.rs  errors.rs  mod.rs  socket.rs
src/daemon/src/util/: constants.rs  log.rs  mod.rs
src/monitor/: Cargo.toml
src/monitor/src/: main.rs  models.rs  sync.rs
src/monitor/src/linux/: inotify.rs  mod.rs  monitor_state.rs  signals.rs
src/monitor/src/macos/: event_handler.rs  mod.rs
src/monitor/src/util/: fs.rs  mod.rs
