[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"]}
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

daemon-interface = { path = "../../lib/daemon-interface" }
daemon-client = { path = "../../lib/daemon-client" }
wsync-config = { path = "../../lib/wsync-config" }
