[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

log4rs = { version = "1.3.0", features = ["console_appender", "humantime"]}
log = "0.4.27"

ctrlc = "3.4.6"

uuid = { version = "1.16.0", features = ["v4"] }

daemon-interface = { path = "../../lib/daemon-interface" }
daemon-client = { path = "../../lib/daemon-client" }
