[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

inotify = "0.11.0"

log4rs = { version = "1.3.0", features = ["console_appender", "humantime"]}
log = "0.4.27"

nix = { version = "0.29.0", features = ["signal"] }
